--- a/index.html
+++ b/index.html
@@ -65,6 +65,61 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, impedit veritatis odio quidem illo dicta dolorum quam, molestiae, consequatur possimus inventore recusandae est fuga cumque dolore quis ut nulla explicabo.
         </p>
     </main>
+        <!-- Footer Nav -->
+        <section class="foot">
+          <div id="one">
+            <h3>HTML</h3>
+            <ul>
+              <li><a href="#">Headings</a></li>
+              <li><a href="#">Paragraphs</a></li>
+              <li><a href="#">Elements</a></li>
+              <li><a href="#">Attributes</a></li>
+              <li><a href="#">Block & Inline</a></li>
+            </ul>
+          </div>
+          <div id="two">
+            <h3>CSS</h3>
+            <li><a href="#">Selectors</a></li>
+            <li><a href="#">Padding</a></li>
+            <li><a href="#">Margin</a></li>
+            <li><a href="#">Box Model</a></li>
+            <li><a href="#">Float</a></li>
+          </div>
+          <div id="three">
+            <h3>Javascript</h3>
+            <li><a href="#">Variables</a></li>
+            <li><a href="#">Operators</a></li>
+            <li><a href="#">Functions</a></li>
+            <li><a href="#">Objects</a></li>
+            <li><a href="#">Events</a></li>
+          </div>
+          <div id="four">
+            <h3>Company</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+              mollitia illum autem doloribus quam tempore tenetur quo, voluptatum
+              nobis totam, at vero asperiores eum voluptas?
+            </p>
+            <div align="center"><img src="avengerslogo.png" alt="Avengers logo" width="50px"></div>
+            <a href="mailto:sales@teamavengers.com">sales@teamavengers.com</a>
+            <br />
+          </div>
+        </section>
+    
+        <!-- Footer -->
+        <footer>
+          <div id="social">
+            <ul>
+                <li><a href="#"><img src="instagram.png" width="40"></a></li>
+                <li><a href="#"><img src="facebook.png" width="40"></a></li>
+                <li><a href="#"><img src="twitter.png" width="40"></a></li>
+                <li><a href="#"><img src="youtube.png" width="40"></a></li>
+            </ul>
+          </div>
+          <div id="copyright">
+            <p>2023 © All Rights Reserved. Designed by 💪 Team Avengers 💪</p>
+          </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
