--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,10 @@
       </div>
     </nav>
     <main id="container">
-        <!-- <img src="thanos.png" alt="Thanos" width="200px">
-        <img src="ironman.png" alt="Iron Man" width="200px"><br> -->
         <div id="contact" align="center">
           <form class="form transparent">
             <h1 style="padding: 10px;">Contact Us</h1>
-<img src="avengersgif2.gif" width="150px"><br>
+<img src="avengersgif2.gif" width="150px"> <img src="thor.gif" width="150px"><br><br>
             <p>Please allow up to 48 business hours for our response.</p>
             <br>
             <label for="fname">First name</label><br>
