--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         <div id="contact" align="center">
           <form class="form transparent">
             <h1 style="padding: 10px;">Contact Us</h1>
-<img src="avengersgif2.gif" width="150px"> <img src="thor.gif" width="150px"><br><br>
+<img src="avengersgif2.gif" width="150px"> <img src="thor.gif" width="150px"> <img src="scarlet.gif" width="150px"><br>
             <p>Please allow up to 48 business hours for our response.</p>
             <br>
             <label for="fname">First name</label><br>
