--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         <a class="navbar-brand title" href="#"
           ><img src="avengerslogo.png" width="22" /> Avengers</a
         >
+        <img src="avengersgif3.gif" height="50px">
         <button
           class="navbar-toggler"
           type="button"
