--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand title" href="#"><img src="avengerslogo.png" width="22"> Avengers</a>
+          <img src="avengersgif3.gif" height="50px">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
