--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,8 @@
             <label for="message">Message</label><br>
             <textarea id="message">Leave your message</textarea><br>
             <br>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-primary">Submit</button> &nbsp;
+            <button type="reset" class="btn btn-secondary">Clear</button>
             <br>
             <br>
           </form>
