--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
           <div id="four">
             <h3>Company</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-              mollitia illum autem doloribus quam tempore tenetur quo, voluptatum
-              nobis totam, at vero asperiores eum voluptas?
+              The Avengers are an all-star ensemble cast of established superhero characters from the Marvel Comics portfolio. Diegetically, these superheroes usually operate independently but occasionally assemble as a team to tackle especially formidable villains. 
             </p>
             <div align="center"><img src="avengerslogo.png" alt="Avengers logo" width="50px"></div>
             <a href="mailto:sales@teamavengers.com">sales@teamavengers.com</a>
