--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,13 @@
             <p>Please allow up to 48 business hours for our response.</p>
             <br>
             <label for="fname">First name</label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fname" name="fname" placeholder="First name"><br>
             <label for="lname">Last name</label><br>
-            <input type="text" id="lname" name="lname"><br>
+            <input type="text" id="lname" name="lname" placeholder="Last name"><br>
             <label for="email">E-mail</label><br>
-            <input type="text" id="email" name="email"><br>
+            <input type="text" id="email" name="email" placeholder="Your e-mail address"><br>
             <label for="message">Message</label><br>
-            <textarea id="message">Leave your message</textarea><br>
+            <textarea id="message" placeholder="Enter your message"></textarea><br>
             <br>
             <button type="button" class="btn btn-primary">Submit</button> &nbsp;
             <button type="reset" class="btn btn-secondary">Clear</button>
@@ -124,9 +124,7 @@
       <div id="four">
         <h3>Company</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-          mollitia illum autem doloribus quam tempore tenetur quo, voluptatum
-          nobis totam, at vero asperiores eum voluptas?
+          The Avengers are an all-star ensemble cast of established superhero characters from the Marvel Comics portfolio. Diegetically, these superheroes usually operate independently but occasionally assemble as a team to tackle especially formidable villains. 
         </p>
         <div align="center"><img src="avengerslogo.png" alt="Avengers logo" width="50px"></div>
         <a href="mailto:sales@teamavengers.com">sales@teamavengers.com</a>
